<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:textColor="@color/design_default_color_error"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/et_Amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_100_00"
        android:inputType="numberDecimal"
        android:text=""
        android:autofillHints="" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView2"
        android:textColor="@color/design_default_color_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b_tip_minus"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/minusTipPercent"
            android:textSize="32sp"
            android:textColor="@color/teal_700"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"/>

        <TextView

            android:id="@+id/tv_tip"
            android:textColor="@color/design_default_color_error"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_height="wrap_content"
            android:text="@string/tipPercent" />

        <Button
            android:id="@+id/b_tip_plus"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/plusTipPercent"
            android:textColor="@color/teal_700"
            android:textSize="32sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView3"
        android:textColor="@color/design_default_color_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/people" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b_PEOPLE_minus"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/minusPeople"
            android:textSize="32sp"
            android:textColor="@color/teal_700"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"/>

        <TextView

            android:id="@+id/tv_people"
            android:textColor="@color/design_default_color_error"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_height="wrap_content"
            android:text="@string/peopleNum" />

        <Button
            android:id="@+id/b_PEOPLE_plus"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/plusPeople"
            android:textColor="@color/teal_700"
            android:textSize="32sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <Button
        android:id="@+id/b_calculate"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_tip" />

    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipCount" />

    <TextView
        android:id="@+id/tv_tip_output"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/press_calculate_tip" />

    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total" />

    <TextView
        android:id="@+id/tv_total_output"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/press_calculate_tip2" />
</LinearLayout>